Some sime tedium I thought I'd pitch in with...
Created attachment 59207 [details] [review] Add GType's for packagekit-glib2 enumerations
Doesn't pk-enum-types.h need to go into packagekit.h too? Richard.
Created attachment 59212 [details] [review] Included in packagekit.h header
Added EXTRA_DIST and merged and go ahead on #PackageKit.
Created attachment 59225 [details] [review] Actually include the enum-types in the build Looks like I screwed up the build on master, by assuming BUILT_SOURCES was included in the libraries sources. Sorry bout that. Here's the fix.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.