Add GType's for packagekit-glib2 enumerations

https://bugs.freedesktop.org/show_bug.cgi?id=48038